  AT_dreadnought .description

ThingDef
  AntyTransitionRefleum_Thing .label .description
  AT_ChargeBomb_Ready_Proty .label
  AT_SuicideBomb_Ready_Proty .label

HediffDef
  AT_Dreadnought_Reborn .label .description
  AT_Dreadnought_Reborn_High .label .description
  AntyDreadnoughtbirth .comps.0.discoverLetterLabel .comps.0.discoverLetterText
  Antypheromone_ShootingReady .label
  AntyLarva_p .description

RecipeDef
  AT_Dreadnought_metamorphosis .label .description .jobString

ResearchProjectDef
  AT_Dreadnought_metamorphosisSurgery .label .description .discoveredLetterTitle .discoveredLetterText

DamageDef
  AT_SporeBomb .label .deathMessage
  AT_AcidBomb_C .label .deathMessage
  AT_ParaponeraBomb .deathMessage
  AT_ChargeBomb_Proty .label .deathMessage
  AT_SuicideBomb_Proty .label .deathMessage

(2022/1/20)
ResearchProjectDef
  AT_Dreadnought_metamorphosisSurgery .description .discoveredLetterText

(2022/2/2)
'Fix'
"I fixed the typo. Please check not only the example, but also the Def itself. sorry."
Antie -> Anties, Anty, Anty's
ax -> axe
ThingDef
  AT_AP_Helm_A .description
  AT_AP_SH_A .description
  AT_AP_CO_A .description
  AT_AP_CO_B .description

  AntyExoskeleton_Production .description

  Refleum .description

  AT_Halberd .description
  AT_Hammer .description
  AT_AcidCross .description

AlienRace.BackstoryDef
  Anty_Amigo_B_Meleeinfantry .baseDescription
  Anty_Amigo_B_Meleeinfantry_Drop .baseDescription

'Add'
ThingDef
  Anty_prototype .description
  AntyExoskeleton .description
  Antypheromone_Charge .description
  Antypheromone_Suicide .description

AlienRace.ThingDef_AlienRace
  Anty .description

RulePackDef
  NamerFactionAnty.rulePack.rulesStrings.17
  ~
  NamerFactionAnty.rulePack.rulesStrings.24

(2022/02/20)
ThingDef
  AT_hydroheliumion_D .label .description .tools.0.label
  Bullethydroheliumion_D .label
  Filth_ApproachSmoke_A .label

PawnKindDef
  AT_Launcher_B .label
  AT_Power_A_B  .label
  AT_Power_A_C  .label
