@@ -127,7 +127,7 @@ RulePackDef
   ~
   NamerFactionAnty.rulePack.rulesStrings.24
 
-(2022/02/20)
+(2022/02/21)
 ThingDef
   AT_hydroheliumion_D .label .description .tools.0.label
   Bullethydroheliumion_D .label
@@ -137,4 +137,7 @@ PawnKindDef
   AT_Launcher_B .label
   AT_Power_A_B  .label
   AT_Power_A_C  .label
+
+HediffDef
+  AT_LarvaLearningAid .label .description
 
